# generic-integration-client

./: README.md  auth.py  client.py  exceptions.py  pyproject.toml  requirements.txt
generic-integration-client/: __init__.py  auth.py  client.py  exceptions.py  test_client.py
tests/: test_client.py
