[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-integration-client"
version = "0.1.0"
description = "Cliente HTTP genérico para integrações externas com suporte a múltiplos métodos de autenticação, retry, circuit breaker, métricas e logging estruturado."
authors = [{name = "Nomadia", email = "nomadia.erp@mail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tenacity",
    "pybreaker",
    "structlog",
    "prometheus-client"
]

[project.urls]
Homepage = "https://github.com/nomadiaerp/generic-integration-client"
Repository = "https://github.com/nomadiaerp/generic-integration-client"
